# rk_mali

./: .gitignore  CMakeLists.txt  mali_test.c  readme.md
drmout/: CMakeLists.txt  display.c  display.h  draw_rect.c  drm_out.c  rkdrm_display.c
libs/: libdrm.la  libwayland-server.so.0.1.0
libs/bak/: libjpeg.so.62.3.0  libv4l2.so.0.0.0  libv4l2rds.so.0.0.0  libv4lconvert.la  libv4lconvert.so.0.0.0  libwayland-client.so.0.3.0
libsrc/: drmDsp.c  drmDsp.h  myutils.h  vpu_decode.c  vpu_encode.c  vpu_encode.h
libsrc/drmDsp/: bo.c  bo.h  dev.c  modeset.c  modeset.h
opencl/: CMakeLists.txt  HelloWorld.cpp  readme
opencl/Blend/: Blend.cl  Blend.cpp  CMakeLists.txt
opencl/Blend_drm/: .Blend_drm.cpp.swp  Blend_drm.cl  Blend_drm.cpp  CMakeLists.txt
opencl/Blend_drm_1d/: Blend_drm_1d.cl  Blend_drm_1d.cpp  CMakeLists.txt
opencl/C_test/: CMakeLists.txt  c_blend.c  c_rotate.c
opencl/HelloWorld/: CMakeLists.txt
opencl/LibCL/: CMakeLists.txt  LibCL.cl  LibCL.cpp  LibCL.h  TestBlend.cpp  TestBlend_1d.cpp  TestPerformance.cpp  TestRotate.cpp
opencl/OpenCLInfo/: OpenCLInfo.cpp
opencl/Rotate/: CMakeLists.txt  Rotate.cl  Rotate.cpp
opencl/Rotate_drm/: CMakeLists.txt  Rotate_drm.cl  Rotate_drm.cpp
opencl/Rotate_drm_1d/: CMakeLists.txt  Rotate_drm_1d.cl  Rotate_drm_1d.cpp
opengl/: CMakeLists.txt  drm-gbm.c  glsample_drm.cpp  readme.md
opengles_egl_gbm_drm/: .gitignore  Makefile  common.h  egl.c  egl.h  egl_drm  main.c  readme
opengles_egl_gbm_drm/drm/: drm_atomic.c  drm_atomic.h  drm_common.c  drm_common.h  drm_log.c  drm_log.h  drm_prime.h
test_usb/: .test_usb_hdmi.c.swp  .test_usb_mipi.c.swp  CMakeLists.txt  modeset-plane-rotate.c  modeset-plane-set.c  my_usb_camera.c  my_usb_camera.h  ringqueue.c  ringqueue.h  test_usb_hdmi.c  test_usb_hdmi_rgb8888_out.c  test_usb_mipi.c  test_usb_mipi_rgb8888_out.c
tmp/: readme
